# cpp-common

./: CMakeLists.txt
cmake/: abseil.cmake  package.cmake  spdlog.cmake
example/: CMakeLists.txt
example/log/: CMakeLists.txt  main.cpp
log/: CMakeLists.txt  logging.cpp  logging.h
